--- a/app/views/organizations/search.erb
+++ b/app/views/organizations/search.erb
@@ -1,6 +1,8 @@
 <div class = "container p-5">
+
+<h1>Search Results</h1>    
     
-<h3>Search Results of Organizations:</h3>
+<h3 id="organizations-text">Organizations</h3>
 <table class="table">
   <thead class="table-secondary">
     <tr>
@@ -14,15 +16,16 @@
   <tbody>
     <% @matchOrganizations.each do |organization| %>
       <tr>
-        <td><%= link_to "#{organization.name}", "#{organization.web_address}",:target => '_blank', style: 'color:#0080ff;', class: 'css_class' %></td>
-        <td><%= organization.category %></td> 
-        <td><%= link_to 'More Details', organization, class:"btn btn-secondary btn-sm"  %></td>
+        <td><%= link_to "#{organization.name}", "#{organization.web_address}",:target => '_blank', class: 'nav-item-primary' %></td>
+        <td><%= organization.category %></td>
+        <td colspan="2"></td>
+        <td><%= link_to 'More Details', organization, class:"btn btn-primary btn-sm"  %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<h3>Search Results of Events:</h3>
+<h3 id="events-text">Events</h3>
 <table class="table">
   <thead class="table-secondary">
     <tr>
@@ -30,7 +33,7 @@
       <th><%= link_to "Date", :sort => "date"%></th>
       <th><%= link_to "Start time", :sort => "start_time"%></th>
       <th><%= link_to "End time", :sort => "end_time"%></th>
-      <th colspan="3"></th>
+      <th colspan="1"></th>
     </tr>
   </thead>
 
@@ -38,10 +41,10 @@
 
     <% @matchEvents.each do |event| %>
       <tr>
-        <td><%= link_to "#{event.name}", "#{event.link}", :target => '_blank', style: 'color:#0080ff;', class: 'css_class'  %></td>
+        <td><%= link_to "#{event.name}", "#{event.link}", :target => '_blank', class: "nav-item-secondary"  %></td>
         <td><%= event.date %></td>
-        <td><%= event.start_time %></td>
-        <td><%= event.end_time %></td>
+        <td><%= event.start_time.strftime("%I:%M%p") %></td>
+        <td><%= event.end_time.strftime("%I:%M%p") %></td>
         <td><%= link_to 'More Details', event, class:"btn btn-secondary btn-sm" %></td>
       </tr>
     <% end %>
