Small changes to calendar

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -24,6 +24,10 @@ a {
   &.nav-item-primary {
     color: #1d96fc;
   }
+  
+  &.white-link {
+    color: #fff;
+  }
     
   &.nav-item-secondary {
     color: #ff0054;
