--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= favicon_link_tag asset_path('favicon.png') %>
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/fontawesome-all.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
         a:link { text-decoration: none; }
 
