Fixed org events table height

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -52,7 +52,7 @@
             </div>
             
             <div class="col-7">
-                <div class="container p-3 bg-white border border-secondary">
+                <div class="container p-3 h-100 bg-white border border-secondary">
                  
                 <h3 id="events-text">Events</h3>
                 <table class="table">
