--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,18 +6,11 @@
       <link rel="stylesheet" type="text/css" href="custom.css">
   </head>
 <body>
-    
+   <%= image_tag "Background2.jpg", class: "background-image", alt: "Background image" =%>   
 <div class="container pt-3">
-  
-  <h1 class="text-center">Welcome to Volunteer Connect</h1>
-<!--   <div class="text-center">
-      
-        <%= link_to 'Organizations', organizations_path, class:"btn btn-primary" %>
-      
 
-        <%= link_to 'Events', events_path, class:"btn btn-secondary" %>
- 
-  </div> -->
+  <h1 class="text-center white-text">Welcome to Volunteer Connect</h1>
+
 </div>
     
 <center class = "container p-5 ">
@@ -27,7 +20,7 @@
 
 
 
-<div class="container bg-light p-5 mb-4">
+<div class="container bg-transparent p-5 mb-4">
 <h1 class="text-center">Volunteering in Action!</h1>   
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
