--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
         </div>
        </div>
        <!--Right aligned items-->
-       <div class="navbar-nav text-right">
+       <div class="navbar-nav text-right p-2">
 
        <% if signed_in? %>
         <button type="button" class="btn">
