Added org category filter buttons

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -15,6 +15,18 @@
     border-color: #1d96fc
 }
 
+.btn-outline-primary {
+    color: #1d96fc;
+    background-color: #fff;
+    border-color: #1d96fc
+}
+
+.btn-outline-primary:hover {
+    color: #fff;
+    background-color: #1d96fc;
+    border-color: #1d96fc
+}
+
 .btn-secondary {
     color: #fff;
     background-color: #ff0054;
