Added org event filter buttons

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -43,6 +43,18 @@
     
 }
 
+.btn-outline-secondary {
+    color: #ff0054;
+    background-color: #fff;
+    border-color: #ff0054
+}
+
+.btn-outline-secondary:hover {
+    color: #fff;
+    background-color: #ff0054;
+    border-color: #ff0054
+}
+
 table {
     table-layout : fixed;
 }
