--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -53,8 +53,10 @@ var clearAll = () => {
                      <input type="text" id="myFilter" class="form-control" onkeyup="myFunction()" placeholder="Find an organization...">
                 </div>
         <div class="col-2">
+            <div class="row">
             <%= link_to 'New Organization', new_organization_path, class:"btn btn-primary float-end ml-auto" %>
-            </div>
+                 </div>
+                 </div>
         
         </div>
 <!-- <div class="row">
