Changed home welcome text color

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
    <%= image_tag "Background3.jpg", class: "background-image", alt: "Background image" =%>   
 <div class="container pt-3">
 
-  <h1 class="text-center white-text">Welcome to Volunteer Connect</h1>
+  <h1 class="text-center">Welcome to Volunteer Connect</h1>
 
 </div>
     
