--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,39 +26,40 @@
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="app/assets/stylesheets/custom.css">
   </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-light bg-light" id='mainNav'>
   <a class="navbar-brand" href="#"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+  <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon bg-primary"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <button type="button" class="btn">
+  
+  <div class="collapse navbar-collapse" id="navbarResponsive">
+    <div class="navbar-nav me-auto">
+      <button type="button" class="btn nav-item">
           <li id = home_button class = "nav-item"><%= link_to 'Home', home_url %></li>
       </button>
         
-      <button type="button" class="btn">
+      <button type="button" class="btn nav-item">
           <td><%= link_to 'Organizations', organizations_url, class: "nav-item-primary" %></td>
       </button>
         
-      <button type="button" class="btn">
+      <button type="button" class="btn nav-item">
           <td class = "nav-item"><%= link_to 'Events', events_url, class: "nav-item-secondary" %></td>
       </button>
        
        <% if signed_in? %>
-        <button type="button" class="btn">
+        <button type="button" class="btn nav-item">
           <a class="nav-item"><%= link_to "Profile", users_show_path %></a>
       </button>
         
-      <button type="button" class="btn">
+      <button type="button" class="btn nav-item">
           <a class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete %></a>
       </button>
         <% else %>
-      <button type="button" class="btn">
+      <button type="button" class="btn nav-item">
           <td class="nav-item"><%= link_to "Sign Up", new_user_registration_path %></td>
       </button>
         
-      <button type="button" class="btn">
+      <button type="button" class="btn nav-item">
           <a class="nav-item"><%= link_to "Login", new_user_session_path %></a>
       </button>
 
@@ -66,7 +67,7 @@
         </div>
        </div>
        <!--Right aligned items-->
-       <div class="navbar-nav text-right p-2">
+       <div class="navbar-nav ms-auto p-2">
 
        <% if signed_in? %>
         <button type="button" class="btn">
