--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,8 +19,8 @@
 </center>
 
 
-
 <div class="container bg-transparent p-5 mb-4">
+    
 <h1 class="text-center">Volunteering in Action!</h1>   
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
@@ -36,17 +36,17 @@
   <div class="carousel-inner" style=" width:100%; height: 500px !important;">
     <div class="carousel-item active">
         <div class="d-flex justify-content-center">
-          <%= image_tag "codenola.jfif", alt: "Homepage logo with two smiling faces",style: 'max-height: 32rem;', height:"500px", crop:"pad" =%>
+          <%= image_tag "codenola.jfif", alt: "Code Nola Volunteering photo",style: 'max-height: 32rem;', height:"500px", crop:"pad" =%>
         </div>
     </div>
     <div class="carousel-item">
         <div class="d-flex justify-content-center">
-          <%= image_tag "grow_dat.jfif", alt: "Homepage logo with two smiling faces",style: 'max-height: 32rem;', height:"500px", crop:"pad"  =%>
+          <%= image_tag "grow_dat.jfif", alt: "Grow Dat volunteering Photo",style: 'max-height: 32rem;', height:"500px", crop:"pad"  =%>
         </div>     
     </div>
     <div class="carousel-item">
         <div class="d-flex justify-content-center">
-          <%= image_tag "greenlight.jpg", alt: "Homepage logo with two smiling faces",style: 'max-height: 32rem;', height:"500px", crop:"pad"  =%>
+          <%= image_tag "greenlight.jpg", alt: "Green Light Volunteering Photo",style: 'max-height: 32rem;', height:"500px", crop:"pad"  =%>
         </div>
     </div>
   </div>
