--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -82,7 +82,7 @@ var clearAll = () => {
             <div class="flip-card-front">
         <div class="card h-100 border-primary">
           <h5 class="card-header"> <%= organization.name %> </h5>
-          <%= image_tag "#{organization.image}", alt: "Photo of #{organization}", height:"200px", crop:"pad" =%>
+          <%= image_tag "#{organization.image}", alt: "Photo of #{organization} in action", height:"200px", crop:"pad" =%>
           <div class="card-body">
             <p class="card-text" id="organizations-text"> <%= organization.category %> </p>
           </div>
