Added pagination toggle for search filter for events and organizations.

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -33,6 +33,14 @@ function myFunction() {
             cards[i].style.display = "none";
         }
     }
+    var inputText = document.getElementById("myFilter").value;
+    if (inputText){
+        hidePagination();
+    }
+    else{
+        showPagination();
+    }
+
 }
         
 var filter = (filter) => {
