Gave org card container in events show

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -45,6 +45,9 @@
     </div>
     
     <div class="col">
+        
+        <div class="container p-3 h-100 bg-white border border-primary">
+        <h3 id="organizations-text">Host</h3>
                 <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -67,6 +70,7 @@
               </div>
              </div>
     </div>
+        </div>
         </div>
         </div>
     </div>
