Added calendar title

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -107,6 +107,11 @@ table {
     color: #ff0054
 }
 
+#cal-title {
+    color: #ff0054;
+    font-size: 30px!important;
+}
+
 .flip-card {
   background-color: transparent;
   width: auto;
