--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,6 +1,5 @@
 .text-center {
     font-family: "Tahoma", sans-serif;
-    font-size: 50px;
     font-weight: bold
 }
 
@@ -109,7 +108,9 @@ table {
 
 #cal-title {
     color: #ff0054;
-    font-size: 30px!important;
+    font-size: 30px;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .flip-card {
