--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,11 @@
         <%= @user.email %>
     </p>
     
+    <p>
+        <strong>Name:</strong>
+        <%= @user.userName %>
+    </p>
+    
     <button type="button" class="btn btn-primary mb-5">
           <a class="nav-item"><%= link_to "Edit Information", edit_user_registration_path %></a>
     </button>
