Added name to new registration

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="row">
       <div class="form-group col-md-4">
-        <%= f.label :userName %><br />
+        <%= f.label :Name %><br />
         <%= f.text_field :userName, autofocus: true, class: "form-control" %>
       </div>
     </div>
