--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,12 @@
     <%= f.email_field :email, autofocus: true, class: "form-control" %>
   </div>
 </div>
+    <div class="row">
+      <div class="form-group col-md-4">
+        <%= f.label :Name %><br />
+        <%= f.text_field :userName, autofocus: true, class: "form-control" %>
+      </div>
+    </div>
 <div class="row">
   <div class="form-group col-md-4">
     <%= f.label :password %>
