Made address validated

--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -30,6 +30,7 @@
   <div class="field row my-2 pt-2" >
     <div class="col-sm-3">
       <%= f.label :address %>
+      <font color ="red">*</font>
     </div>
     <div class="col-sm-9">
       <%= f.text_field :address %>
